--- a/Proyecto_web/src/main/resources/static/contacto.html
+++ b/Proyecto_web/src/main/resources/static/contacto.html
@@ -3,13 +3,27 @@
 <html>
     <head>
         <title>Contacto</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/contacto.css">
     </head>
     <body>
-        <div>
-            <h1>Servicio al cliente</h1>
-            <a href="index.html"> Back </a>
-        </div>
+	<div class="container">
+		<div class="content">
+			<h1> Contacto  </h1>
+                        <ol>
+                            <li>ConoComodin</li>
+                            <li>@Cono_Comodin</li>
+                            <li>+506 11112222</li>
+                            <li>rayo_makuin@gmail.com</li>
+                         
+                        </ol>
+			<ul class="social">
+                            <li><a href="#"><img src="https://cdn-icons-png.flaticon.com/512/747/747374.png"> </a></li>
+                            <li><a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1077/1077042.png"> </a></li>
+                            <li><a href="#"><img src="https://cdn-icons-png.flaticon.com/512/160/160200.png"></a></li>
+                            <li><a href="#"><img src="https://cdn-icons-png.flaticon.com/512/2150/2150313.png"></a></li>
+                        </ul>
+		</div>
+            <a href="index.html">Home</a>
+	</div>
     </body>
 </html>
