--- a/Proyecto_web/src/main/resources/static/reservar.html
+++ b/Proyecto_web/src/main/resources/static/reservar.html
@@ -3,16 +3,20 @@
 <html>
     <head>
         <title>Reservaciones</title>
+        <link rel="stylesheet" href="css/reservar.css">
         
     </head>
     <body>
-        <div>
+        <div class="container">
             <h1>Reservar habitaciones</h1>
-            <br>
-            <p> Opciones: </p>
+            <h2>Opciones:</h2>
             <ul>
-                <li>Habitacion simple</li>
-                <li>Habitacion Doble</li>
+                <li>Habitacion simple </li>
+                <li>Habitacion simple </li>
+            </ul>
+            <ul class="link">
+                <li><a href="reservar.html"> Reservar </a></li>
+                <li><a href="reservar.html"> Reservar </a></li>
             </ul>
             <a href="index.html"> Back </a>
         </div>
