--- a/Proyecto_web/src/main/resources/static/cancelar.html
+++ b/Proyecto_web/src/main/resources/static/cancelar.html
@@ -2,14 +2,39 @@
 
 <html>
     <head>
-        <title>Cancelaciones</title>
-        
+        <title>Video Background</title>
+        <link rel="stylesheet" href="css/cancelar.css">
     </head>
     <body>
-        <div>
-            <h1> Cancelar reservas/editarlas </h1>
-            <br>
-            <a href="index.html"> Back </a>
-        </div>
+        <section class="content">
+            <video autoplay loop muted>
+                <source src="videos/video2.mp4" type="video/mp4">
+
+            </video>
+            <header>
+                <h2 class="logo">Cancelar Reservaciones</h2> <!-- heading o cabecera-->
+            </header>
+            <div class="text">
+                <form method="post">
+                <div class="txt_field">
+                    <input type="text" required>
+                    <label>Numero de Reserva</label>
+                </div>
+                <div class="txt_field">
+                    <input type="text" required>
+                    <label>Apellido</label>
+                </div>
+                <input type="submit" value="Verificar">
+                <div class="cancelar link">
+                    Desea Cancelar la Reserva? <a href="cancelar.html"> Cancelar </a>
+                    
+                </div>
+                <a href="index.html">Home</a>
+            </form>
+            </div>
+        </section>
+
+
     </body>
 </html>
+
