Avance 3 - Jose Pereira

--- a/Proyecto_web/src/main/resources/static/consulta.html
+++ b/Proyecto_web/src/main/resources/static/consulta.html
@@ -19,7 +19,7 @@
                 </div>
                 <input type="submit" value="Verificar">
                 <div class="signup link">
-                    Desea eliminar esta reserva? <a href="cancelar.html"> Ir a Cancelar </a>
+                    Desea eliminar esta reserva? <a href="consulta.html"> Ir a Cancelar </a>
                 </div>
                 <a href="index.html"> Home </a>
             </form>
