--- a/Proyecto_web/src/main/resources/static/reservar.html
+++ b/Proyecto_web/src/main/resources/static/reservar.html
@@ -4,21 +4,86 @@
     <head>
         <title>Reservaciones</title>
         <link rel="stylesheet" href="css/reservar.css">
-        
     </head>
     <body>
-        <div class="container">
-            <h1>Reservar habitaciones</h1>
-            <h2>Opciones:</h2>
-            <ul>
-                <li>Habitacion simple </li>
-                <li>Habitacion simple </li>
-            </ul>
-            <ul class="link">
-                <li><a href="reservar.html"> Reservar </a></li>
-                <li><a href="reservar.html"> Reservar </a></li>
-            </ul>
-            <a href="index.html"> Back </a>
+        <div id="booking" class="section">
+            <div class="section-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-7 col-md-push-5">
+                            <div class="booking-cta">
+                                <h1>Realizar Reservacion</h1>
+                                <p>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-md-pull-7">
+                            <div class="booking-form">
+                                <form>
+                                    <div class="form-group">
+                                        <span class="form-label">Tipo de Habitacion</span>
+                                        <input class="form-control" type="text" placeholder="Enter a type of room">
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <div class="form-group">
+                                                <span class="form-label">Check In</span>
+                                                <input class="form-control" type="date" required>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <div class="form-group">
+                                                <span class="form-label">Check out</span>
+                                                <input class="form-control" type="date" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="form-group">
+                                                <span class="form-label">Rooms</span>
+                                                <select class="form-control">
+                                                    <option>1</option>
+                                                    <option>2</option>
+                                                    <option>3</option>
+                                                </select>
+                                                <span class="select-arrow"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="form-group">
+                                                <span class="form-label">Adults</span>
+                                                <select class="form-control">
+                                                    <option>1</option>
+                                                    <option>2</option>
+                                                    <option>3</option>
+                                                    <option>4</option>
+                                                </select>
+                                                <span class="select-arrow"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="form-group">
+                                                <span class="form-label">Children</span>
+                                                <select class="form-control">
+                                                    <option>0</option>
+                                                    <option>1</option>
+                                                    <option>2</option>
+                                                    <option>4</option>
+                                                </select>
+                                                <span class="select-arrow"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="form-btn">
+                                        <button class="submit-btn">Reservar</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
