--- a/Proyecto_web/src/main/resources/static/signup.html
+++ b/Proyecto_web/src/main/resources/static/signup.html
@@ -2,27 +2,46 @@
 
 <html>
     <head>
-        <title>Registrarse</title>
-        <link rel="stylesheet" href="css/signup.css">
+        <title>Admin Login</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/signup.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="content">
-            <h1>Registrarse</h1>
-            <form method="post">
-                <div class="txt_field">
-                    <input type="text" required>
-                    <label>Username</label>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <h2 class="text-center text-dark mt-5">Registrarse</h2>
+                    <div class="text-center mb-5 text-dark"></div>
+                    <div class="card my-5">
+
+                        <form class="card-body cardbody-color p-lg-5">
+
+                            <div class="text-center">
+                                <img src="https://64.media.tumblr.com/649b80a2b63e08f6800a0f0616abf139/01bda9f627db47d6-d2/s540x810/b50a02fbaee35e2801fd41e9069d83941d6166c3.jpg" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
+                                     width="200px" alt="profile">
+                            </div>
+
+                            <div class="mb-3">
+                                <input type="text" class="form-control" id="Username" aria-describedby="emailHelp"
+                                       placeholder="User Name">
+                            </div>
+                            <div class="mb-3">
+                                <input type="password" class="form-control" id="password" placeholder="password">
+                            </div>
+                            <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Login</button></div>
+                            <div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
+                                Registered? <a href="#" class="text-dark fw-bold"> Create an
+                                    Account</a>
+                            </div>
+                            <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Home</button></div>
+                        </form>
+                    </div>
+
                 </div>
-                <div class="txt_field">
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-                <input type="submit" value="Login">
-                <div class="signup link">
-                    Already a member? <a href="login.html"> Login </a>
-                </div>
-            </form>
-            <a href="index.html"> Home </a>
+            </div>
         </div>
     </body>
 </html>
