--- a/Proyecto_web/src/main/resources/static/mainAdmin.html
+++ b/Proyecto_web/src/main/resources/static/mainAdmin.html
@@ -21,6 +21,7 @@
                 <img src="https://imagenes.20minutos.es/files/image_656_370/uploads/imagenes/2020/10/26/el-gato-que-baila-al-ritmo-de-la-musica.png" width="90" height="90" class="d-inline-block align-top" alt="">
                 Cono Comodin
             </a>
+            <a href="index.html">Home</a>
         </nav>
         <section class="bg-light py-4 my-5">
             <div class="container">
