--- a/Proyecto_web/src/main/resources/static/index.html
+++ b/Proyecto_web/src/main/resources/static/index.html
@@ -55,7 +55,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block" style="z-index: 2000;">
                 <div class="container-fluid">
                     <!-- Navbar brand -->
-                    <a class="navbar-brand nav-link" target="_blank" href="index.html">
+                    <a class="navbar-brand nav-link" target="_blank">
                         <strong>Cono Comodin</strong>
                     </a>
                     <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
@@ -72,31 +72,6 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="signup.html">Iniciar Sesion</a>
-                            </li>
-                        </ul>
-
-                        <ul class="navbar-nav list-inline">
-                            <!-- Icons -->
-                            <li class="">
-                                <a class="nav-link" href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA" rel="nofollow"
-                                   target="_blank">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
-                            </li>
-                            <li class="">
-                                <a class="nav-link" href="https://www.facebook.com/mdbootstrap" rel="nofollow" target="_blank">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://twitter.com/MDBootstrap" rel="nofollow" target="_blank">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/mdbootstrap/mdb-ui-kit" rel="nofollow" target="_blank">
-                                    <i class="fab fa-github"></i>
-                                </a>
                             </li>
                         </ul>
                     </div>
@@ -128,47 +103,11 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Single item -->
-                    <div class="carousel-item">
-                        <div class="mask" style="background-color: rgba(0, 0, 0, 0.3);">
-                            <div class="d-flex justify-content-center align-items-center h-100">
-                                <div class="text-white text-center">
-                                    <h2>Pruebaaaaa</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Single item -->
-                    <div class="carousel-item">
-                        <div class="mask" style="
-                             background: linear-gradient(
-                             45deg,
-                             rgba(29, 236, 197, 0.7),
-                             rgba(91, 14, 214, 0.7) 100%
-                             );
-                             ">
-                            <div class="d-flex justify-content-center align-items-center h-100">
-                                <div class="text-white text-center">
-                                    <h2>And cover it with any mask</h2>
-                                    <a class="btn btn-outline-light btn-lg m-2"
-                                      href="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1540582108966-F3U16ZAM2TKHNTQG7O6F/world_head.jpg?format=2500w" target="_blank" role="button"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
-                <!-- Inner -->
-
-                <!-- Controls -->
-
             </div>
-            <!-- Carousel wrapper -->
         </header>
         <main class="mt-5">
             <div class="container">
-                <!--Section: Content-->
                 <section>
                     <div class="row">
                         <div class="col-md-6 gx-5 mb-4">
@@ -191,12 +130,12 @@
                 </section>
             </div>
         </main>
-        <!--Footer-->
         <footer class="bg-light text-lg-start">
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 <a class="text-dark" href="index.html">Back to Top</a>
+                <br>
+                <a class="text-dark" href="mainAdmin.html">Administrador</a>
             </div>
         </footer>
-        <!--Footer-->
     </body>
 </html>
